fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,10 +62,14 @@ p {
 
 #dog-photo {
     rotate: 22deg;
-    height: 70%;
-    padding-left: 7%;
+    height: 72%;
     position: absolute;
     z-index: 1;
+}
+
+.photo-col {
+    padding-right:28%;
+    padding-top: 2%;
 }
 
 .dl-button {
@@ -137,12 +141,14 @@ p {
         padding: 0;
     }
 
-    #title {
+    .big-heading {
         text-align: center;
     }
 
     .photo-col {
         height: 400px;
+        text-align:center;
+        padding: 0;
     }
 
 }
